Normalize EOLs and ignore node_modules

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
-﻿* text=auto
-*.sh text eol=lf
-*.ts text eol=lf
-*.tsx text eol=lf
-*.js text eol=lf
-*.json text eol=lf
+﻿# normalize text files to LF in the repo; keep binaries alone
+* text=auto
+*.json text
+*.ts text
+*.tsx text
+*.js text
+*.jsx text
+*.css text
+*.html text
+# keep node binaries as binary
+node_modules/** binary
